[gd_scene load_steps=11 format=3]

[ext_resource type="Script" path="res://Script/Pellet/BasicPellet.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://m2mf7ndsvior" path="res://Art/LDL/85.png" id="2"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="3"]
[ext_resource type="Texture2D" uid="uid://dpdtihxpfwn8k" path="res://Art/MagicWeapon/149.png" id="4"]
[ext_resource type="Texture2D" uid="uid://gw1iaqf6aii5" path="res://Art/MagicWeapon/145.png" id="5"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="6"]
[ext_resource type="Texture2D" uid="uid://bs1kxdx4s2wix" path="res://Art/BackPack/dywk.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cleweddf7kwrh" path="res://Art/BackPack/fydy.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dy6di5exxa3sk" path="res://Art/LDL/86.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cmaxhcvx6roda" path="res://Art/LDL/87.png" id="10"]

[node name="BasicPellet" type="Node2D"]
script = ExtResource( "1" )

[node name="FG" type="ColorRect" parent="."]
offset_left = -44.0
offset_top = -27.0
offset_right = 983.0
offset_bottom = 620.0
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(472, 296)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="BG"]
offset_left = -414.0
offset_top = -199.0
offset_right = 417.0
offset_bottom = 216.0
color = Color(0, 0, 0, 0.403922)
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="BG"]
offset_left = -441.0
offset_top = -278.0
offset_right = -281.0
offset_bottom = -234.0
theme_override_colors/font_color = Color(1, 0.6, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 40
text = "丹药服用"
metadata/_edit_lock_ = true

[node name="TypeButonList" type="HBoxContainer" parent="BG"]
offset_left = -290.0
offset_top = -181.0
offset_right = 343.0
offset_bottom = -146.0
theme_override_constants/separation = 15
metadata/_edit_lock_ = true

[node name="HpDy" type="TextureButton" parent="BG/TypeButonList"]
layout_mode = 2
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )

[node name="Hp" type="Label" parent="BG/TypeButonList/HpDy"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 91.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 17
text = "生命丹"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="MpDy" type="TextureButton" parent="BG/TypeButonList"]
layout_mode = 2
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )

[node name="Mp" type="Label" parent="BG/TypeButonList/MpDy"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 91.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 17
text = "魔法丹"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AttDy" type="TextureButton" parent="BG/TypeButonList"]
layout_mode = 2
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )

[node name="Att" type="Label" parent="BG/TypeButonList/AttDy"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 91.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 0.658824, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.658824, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 17
text = "攻击丹"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="CritDy" type="TextureButton" parent="BG/TypeButonList"]
layout_mode = 2
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )

[node name="Crit" type="Label" parent="BG/TypeButonList/CritDy"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 91.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.658824, 0.67451, 0.670588, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0.67451, 0.670588, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 17
text = "暴击丹"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="LuckyDy" type="TextureButton" parent="BG/TypeButonList"]
layout_mode = 2
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )

[node name="Lucky" type="Label" parent="BG/TypeButonList/LuckyDy"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 91.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 17
text = "幸运丹"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="EmpDy" type="TextureButton" parent="BG/TypeButonList"]
layout_mode = 2
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )

[node name="Emy" type="Label" parent="BG/TypeButonList/EmpDy"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 91.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0.627451, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.627451, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 17
text = "回魔丹"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AllPellet" type="HBoxContainer" parent="BG"]
offset_left = -392.0
offset_top = -116.0
offset_right = 93.0
offset_bottom = 180.0
theme_override_constants/separation = 25
metadata/_edit_lock_ = true

[node name="AllPelletName" type="VBoxContainer" parent="BG/AllPellet"]
layout_mode = 2
theme_override_constants/separation = 39

[node name="Stage_1" type="Label" parent="BG/AllPellet/AllPelletName"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 22
text = "一品丹"

[node name="Stage_2" type="Label" parent="BG/AllPellet/AllPelletName"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 22
text = "二品丹"

[node name="Stage_3" type="Label" parent="BG/AllPellet/AllPelletName"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 22
text = "三品丹"

[node name="Stage_4" type="Label" parent="BG/AllPellet/AllPelletName"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 22
text = "四品丹"

[node name="Stage_5" type="Label" parent="BG/AllPellet/AllPelletName"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 22
text = "五品丹"

[node name="AllPelletBox" type="VBoxContainer" parent="BG/AllPellet"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Stage_1" type="HBoxContainer" parent="BG/AllPellet/AllPelletBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Dy_1" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_1"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_2" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_1"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_3" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_1"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_4" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_1"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_5" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_1"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Stage_2" type="HBoxContainer" parent="BG/AllPellet/AllPelletBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Dy_1" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_2"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_2" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_2"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_3" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_2"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_4" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_2"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_5" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_2"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Stage_3" type="HBoxContainer" parent="BG/AllPellet/AllPelletBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Dy_1" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_3"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_2" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_3"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_3" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_3"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_4" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_3"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_5" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_3"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Stage_4" type="HBoxContainer" parent="BG/AllPellet/AllPelletBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Dy_1" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_4"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_2" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_4"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_3" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_4"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_4" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_4"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_5" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_4"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Stage_5" type="HBoxContainer" parent="BG/AllPellet/AllPelletBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Dy_1" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_5"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_2" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_5"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_3" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_5"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_4" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_5"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="Dy_5" type="TextureRect" parent="BG/AllPellet/AllPelletBox/Stage_5"]
layout_mode = 2
texture = ExtResource( "7" )

[node name="AllPelletPropButton" type="VBoxContainer" parent="BG/AllPellet"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="Eat_1" type="TextureButton" parent="BG/AllPellet/AllPelletPropButton"]
layout_mode = 2
texture_normal = ExtResource( "8" )
texture_pressed = ExtResource( "8" )
texture_hover = ExtResource( "8" )

[node name="Eat_2" type="TextureButton" parent="BG/AllPellet/AllPelletPropButton"]
layout_mode = 2
texture_normal = ExtResource( "8" )
texture_pressed = ExtResource( "8" )
texture_hover = ExtResource( "8" )

[node name="Eat_3" type="TextureButton" parent="BG/AllPellet/AllPelletPropButton"]
layout_mode = 2
texture_normal = ExtResource( "8" )
texture_pressed = ExtResource( "8" )
texture_hover = ExtResource( "8" )

[node name="Eat_4" type="TextureButton" parent="BG/AllPellet/AllPelletPropButton"]
layout_mode = 2
texture_normal = ExtResource( "8" )
texture_pressed = ExtResource( "8" )
texture_hover = ExtResource( "8" )

[node name="Eat_5" type="TextureButton" parent="BG/AllPellet/AllPelletPropButton"]
layout_mode = 2
texture_normal = ExtResource( "8" )
texture_pressed = ExtResource( "8" )
texture_hover = ExtResource( "8" )

[node name="AllPelletProp" type="VBoxContainer" parent="BG/AllPellet"]
layout_mode = 2
theme_override_constants/separation = 43

[node name="PropStage_1" type="Label" parent="BG/AllPellet/AllPelletProp"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20

[node name="PropStage_2" type="Label" parent="BG/AllPellet/AllPelletProp"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20

[node name="PropStage_3" type="Label" parent="BG/AllPellet/AllPelletProp"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20

[node name="PropStage_4" type="Label" parent="BG/AllPellet/AllPelletProp"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20

[node name="PropStage_5" type="Label" parent="BG/AllPellet/AllPelletProp"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20

[node name="AllPelletsBox" type="VBoxContainer" parent="BG"]
offset_left = -299.0
offset_top = -114.0
offset_right = 81.0
offset_bottom = 184.0
theme_override_constants/separation = 10
metadata/_edit_lock_ = true

[node name="Stage_1" type="HBoxContainer" parent="BG/AllPelletsBox"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="Stage_2" type="HBoxContainer" parent="BG/AllPelletsBox"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="Stage_3" type="HBoxContainer" parent="BG/AllPelletsBox"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="Stage_4" type="HBoxContainer" parent="BG/AllPelletsBox"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="Stage_5" type="HBoxContainer" parent="BG/AllPelletsBox"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="zl" type="Label" parent="BG"]
offset_left = -390.0
offset_top = -184.0
offset_right = -310.0
offset_bottom = -160.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "丹药种类"
metadata/_edit_lock_ = true

[node name="line" type="Label" parent="BG/zl"]
layout_mode = 0
offset_left = -20.0
offset_top = 21.0
offset_bottom = 52.0
rotation = -0.104067
scale = Vector2(6, 1)
theme_override_font_sizes/font_size = 20
text = "—"
metadata/_edit_lock_ = true

[node name="pz" type="Label" parent="BG/zl"]
layout_mode = 0
offset_left = -1.0
offset_top = 39.0
offset_right = 79.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "丹药品质"
metadata/_edit_lock_ = true

[node name="TotalProp" type="Label" parent="BG"]
offset_left = -404.0
offset_top = 176.0
offset_right = -284.0
offset_bottom = 218.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 30
text = "总属性："
metadata/_edit_lock_ = true

[node name="TotalProps" type="GridContainer" parent="BG/TotalProp"]
layout_mode = 0
offset_left = 115.0
offset_top = 8.0
offset_right = 821.0
offset_bottom = 39.0
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 10
columns = 6
metadata/_edit_lock_ = true

[node name="Hp" type="Label" parent="BG/TotalProp/TotalProps"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "生命："

[node name="Mp" type="Label" parent="BG/TotalProp/TotalProps"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "魔法："

[node name="Att" type="Label" parent="BG/TotalProp/TotalProps"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.623529, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.623529, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "攻击："

[node name="Crit" type="Label" parent="BG/TotalProp/TotalProps"]
layout_mode = 2
theme_override_colors/font_color = Color(0.615686, 0.541176, 0.494118, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.615686, 0.541176, 0.494118, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "暴击："

[node name="Lucky" type="Label" parent="BG/TotalProp/TotalProps"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "幸运："

[node name="Emp" type="Label" parent="BG/TotalProp/TotalProps"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.592157, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.592157, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 20
text = "回魔："

[node name="Close" type="TextureButton" parent="BG"]
offset_left = 393.0
offset_top = -272.0
offset_right = 447.0
offset_bottom = -252.0
texture_normal = ExtResource( "9" )
texture_pressed = ExtResource( "9" )
texture_hover = ExtResource( "10" )
texture_disabled = ExtResource( "9" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="BG/TypeButonList/HpDy" to="." method="_on_hp_dy_pressed" flags=18]
[connection signal="pressed" from="BG/TypeButonList/MpDy" to="." method="_on_mp_dy_pressed" flags=18]
[connection signal="pressed" from="BG/TypeButonList/AttDy" to="." method="_on_att_dy_pressed" flags=18]
[connection signal="pressed" from="BG/TypeButonList/CritDy" to="." method="_on_crit_dy_pressed" flags=18]
[connection signal="pressed" from="BG/TypeButonList/LuckyDy" to="." method="_on_lucky_dy_pressed" flags=18]
[connection signal="pressed" from="BG/TypeButonList/EmpDy" to="." method="_on_emp_dy_pressed" flags=18]
[connection signal="pressed" from="BG/AllPellet/AllPelletPropButton/Eat_1" to="." method="_on_eat_1_pressed" flags=18]
[connection signal="pressed" from="BG/AllPellet/AllPelletPropButton/Eat_2" to="." method="_on_eat_2_pressed" flags=18]
[connection signal="pressed" from="BG/AllPellet/AllPelletPropButton/Eat_3" to="." method="_on_eat_3_pressed" flags=18]
[connection signal="pressed" from="BG/AllPellet/AllPelletPropButton/Eat_4" to="." method="_on_eat_4_pressed" flags=18]
[connection signal="pressed" from="BG/AllPellet/AllPelletPropButton/Eat_5" to="." method="_on_eat_5_pressed" flags=18]
[connection signal="pressed" from="BG/Close" to="." method="_on_close_pressed" flags=18]
